force-app/main/default/objects/FNA_Product_Mapping__c/FNA_Product_Mapping__c.object-meta.xml
<CustomObject>
    <label>FNA Product Mapping</label>
    <nameField>
        <displayFormat>FNAProduct-{0000000000}</displayFormat>
        <label>FNA Product Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FNA Product Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>