force-app/main/default/objects/FNA_Product_Mapping__c/fields/Avatar_Master__c.field-meta.xml
<CustomField>
    <fullName>Avatar_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Avatar Master</label>
    <referenceTo>Avatar_Master__c</referenceTo>
    <relationshipLabel>FNA Product Mappings</relationshipLabel>
    <relationshipName>FNA_Product_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>