force-app/main/default/objects/FNA_Product_Mapping__c/fields/Normal_Product_Condition__c.field-meta.xml
<CustomField>
    <fullName>Normal_Product_Condition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Normal Product Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>