force-app/main/default/objects/FNA_Product_Mapping__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>RTL_product_master__c</referenceTo>
    <relationshipLabel>FNA Product Mappings</relationshipLabel>
    <relationshipName>FNA_Product_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>