force-app/main/default/objects/FNA_Product_Mapping__c/fields/Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Product_Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>