force-app/main/default/objects/FNA_Product_Mapping__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>FNA Product Mappings</relationshipLabel>
    <relationshipName>FNA_Product_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>