force-app/main/default/objects/FNA_Product_Mapping__c/fields/RTLProductGroup__c.field-meta.xml
<CustomField>
    <fullName>RTLProductGroup__c</fullName>
    <formula>Product__r.FNA_Product_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RTL Product Group</label>
    <type>Text</type>
</CustomField>