force-app/main/default/objects/FNA_Product_Mapping__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Segment of Avatar master</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>