force-app/main/default/objects/FNA_Product_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Segment__c</columns>
    <columns>Sequence_No__c</columns>
    <columns>Product__c</columns>
    <columns>RTLProductGroup__c</columns>
    <columns>RTLProduct__c</columns>
    <columns>Highlight_Product_Condition__c</columns>
    <columns>Normal_Product_Condition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>